fix spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,7 @@ a p {
   --slide-height: 60vh;
   --slide-spacing: 0.5rem;
   --slide-size: 100%;
+  position: relative;
 }
 
 @media screen and (max-width: 768px) {
@@ -136,6 +137,10 @@ a p {
   }
   .embla__slide__content {
     min-height: 680px;
+  }
+  .embla__controls {
+    bottom: 0 !important;
+    padding: 1em !important;
   }
 }
 
@@ -165,8 +170,16 @@ a p {
   grid-template-columns: auto 1fr;
   justify-content: space-between;
   gap: 1.2rem;
-  margin-top: 1.8rem;
+  margin-top: 0.5rem;
+
+  position: absolute;
+  bottom: 1em;
+  width: 100%;
+  padding: 0 1em;
+  left: 0;
+  background: linear-gradient(0deg, #ffffff, #ffffffd6, transparent);
 }
+
 .embla__buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -185,7 +198,7 @@ a p {
   border: 0;
   padding: 0;
   margin: 0;
-  box-shadow: inset 0 0 0 0.2rem rgb(234, 234, 234);
+  box-shadow: inset 0 0 0 0.2rem #6bbaa7a5;
   width: 2rem;
   height: 2rem;
   z-index: 1;
